# design-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pom.xml
agent-core/: pyproject.toml
agent-core/app/: main.py
agent-core/app/admin/: ingest_cases.py  ingest_materials.py
agent-core/app/agents/: cad_parser.py  concept_designer.py  input_parser.py  knowledge_retrieval.py  pdf_parser.py  ppt_parser.py  registry.py  requirement_analyst.py  technical_designer.py  visual_designer.py
agent-core/app/api/: routers.py
agent-core/app/core/: config.py
agent-core/app/crawlers/: base.py  cli.py  utils.py  zcool.py
agent-core/app/models/: crawler.py  database.py  project.py
agent-core/app/runtime/: agent_loop.py  context_manager.py  memory_manager.py  models.py  request_analyzer.py  task.py  tool.py  tool_registry.py  verifier.py
agent-core/app/services/: call_logger.py  doc_generator.py  embedding_client.py  html_generator.py  image_generation.py  intent_llm_extractor.py  intent_recognition.py  intent_recognition_result.py  intent_rule_extractor.py  intent_schemas.py  intent_trace_recorder.py  intent_validator.py  knowledge_base.py  (+8 more)
agent-core/config/: agents.yaml
agent-core/data/: intent_taxonomy.yaml
agent-core/meichen_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent-core/scripts/: crawl_adesign.py  enrich_cases.py  enrich_cases_batch.py  enrich_cases_lite.py  enrich_cases_with_llm.py  enrich_preview.py  import_cases.py  import_cases.sql  import_materials.py  test_rag.py
agent-core/tests/: test_input_parser.py  test_workflow.py
(+466 files in other folders)
