[project]
name = "meichen-ai"
version = "0.1.0"
description = "美陈设计 AI Agent 服务"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pymysql>=1.1.0",
    "pyyaml>=6.0",
    "pymilvus>=2.4.0",
    "httpx>=0.27.0",
    "pillow>=10.3.0",
    "jinja2>=3.1.0",
    "python-pptx>=0.6.23",
    "weasyprint>=62.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "ezdxf>=1.3.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0,<2",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.45.0",
    "click>=8.1.0",
    "jieba>=0.42.1",
    "rapidfuzz>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "sentence-transformers>=3.0.0",
    "eval_type_backport>=0.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (slow, may require external services)",
]
addopts = "-m 'not integration'"

[tool.setuptools]
packages = ["app"]
